added popup onclick

--- a/src/css/geol.css
+++ b/src/css/geol.css
@@ -2,3 +2,25 @@
   height: 500px;
   width: 700px;
 }
+
+.ol-popup {
+  position: absolute;
+  background-color: white;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #cccccc;
+  bottom: 12px;
+  min-width: 280px;
+  height: 300px;
+  z-index: 999;
+}
+
+.ol-popup-closer {
+  text-decoration: none;
+  position: absolute;
+  top: 2px;
+  right: 8px;
+}
+.ol-popup-closer:after {
+  content: "✖";
+}
