--- a/src/css/geol.css
+++ b/src/css/geol.css
@@ -1,8 +1,3 @@
-#map {
-  height: 500px;
-  width: 700px;
-}
-
 .ol-popup {
   position: absolute;
   background-color: white;
@@ -13,6 +8,7 @@
   min-width: 280px;
   height: 300px;
   z-index: 999;
+  animation-duration: 0.5s;
 }
 
 .ol-popup-closer {
